--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
@@ -7,42 +7,45 @@
     <div style="width: 100%;">
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Exam/Test/Session</mat-label>
-                <mat-select formControlName="searchExamId">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="200">
                 <mat-label>Evaluation type</mat-label>
                 <mat-select formControlName="searchEvaluationMasterId" (selectionChange)="GetEvaluationMasterId()">
-                    <mat-option *ngFor="let item of EvaluationNames" [value]="item.EvaluationMasterId">{{item.EvaluationName}}
+                    <mat-option *ngFor="let item of EvaluationNames" [value]="item.EvaluationMasterId">
+                        {{item.EvaluationName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Class/Class group</mat-label>
-                <mat-select formControlName="searchClassGroupId" (selectionChange)="getSelectedClassSubjects()">
-                    <mat-option value="0">select</mat-option>
-                    <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">{{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Subject</mat-label>
-                <mat-select formControlName="searchSubjectId">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.SubjectId">{{item.ClassSubject}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-           
+            <span *ngIf="!EvaluationUpdatable && EvaluationUpdatable!=null">
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Class/Class group</mat-label>
+                    <mat-select formControlName="searchClassGroupId" (selectionChange)="getSelectedClassSubjects()">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">{{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Exam/Test/Session</mat-label>
+                    <mat-select formControlName="searchExamId">
+                        <mat-option [value]="0">select</mat-option>
+                        <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Subject</mat-label>
+                    <mat-select formControlName="searchSubjectId">
+                        <mat-option [value]="0">select</mat-option>
+                        <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.SubjectId">
+                            {{item.ClassSubject}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </span>
             <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationClassSubjectMap()">
-                 <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                <mat-icon>search</mat-icon>
+                <mat-icon *ngIf="loading">
+                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                </mat-icon>
             </button>
         </form>
         <!-- <div style="width: 100%;"> -->
@@ -68,8 +71,9 @@
                     <mat-form-field appearance="outline">
                         <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.ClassGroupId"
                             [value]="element.ClassGroupId">
-                            <mat-option *ngFor="let item of ClassGroups" 
-                            [value]="item.MasterDataId">{{item.MasterDataName}}
+                            <mat-option value="0">select</mat-option>
+                            <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">
+                                {{item.MasterDataName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -83,7 +87,8 @@
                         <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.ClassSubjectId"
                             [value]="element.ClassSubjectId">
                             <mat-option value="0">select</mat-option>
-                            <mat-option *ngFor="let item of ClassSubjects" [value]="item.SubjectId">{{item.ClassSubject}}
+                            <mat-option *ngFor="let item of ClassSubjects" [value]="item.SubjectId">
+                                {{item.ClassSubject}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -96,12 +101,13 @@
                     <mat-form-field appearance="outline">
                         <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.ExamId"
                             [value]="element.ExamId">
+                            <mat-option value="0">select</mat-option>
                             <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
-            </ng-container>  
+            </ng-container>
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active
                 </mat-header-cell>
@@ -113,18 +119,18 @@
             </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
-                    <button *ngIf="EvaluationMasterId!=0" [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab (click)="AddNew()">
+                    <button *ngIf="EvaluationMasterId!=0" [disabled]="loading || Permission=='read'"
+                        matTooltip="add new" mat-mini-fab (click)="AddNew()">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" 
-mat-raised-button color="accent"
-                        (click)="UpdateOrSave(element)">
-                         <mat-icon>save</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                    <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save"
+                        mat-raised-button color="accent" (click)="UpdateOrSave(element)">
+                        <mat-icon>save</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
                     </button>
                 </mat-cell>
             </ng-container>
@@ -133,6 +139,6 @@ mat-raised-button color="accent"
             </mat-row>
         </mat-table>
         <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
-       
+
     </div>
 </div>
