--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -48,6 +48,7 @@
                                        || Parent=='Period Type'
                                        || Parent=='Roll No Generation' 
                                        || Parent=='User Type'
+                                       || Parent=='Exam Status'
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
