--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.scss
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.scss
@@ -21,7 +21,7 @@ mat-cell:first-of-type{
     flex:1 1 70px;
     justify-content: center;
 }
-.mat-column-Action{
+.mat-column-Action,.mat-column-ClassGroupId{
     flex:1 1 120px;
 }
 .mat-column-EvaluationName,
