--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -20,6 +20,9 @@ mat-cell:first-of-type {
 {
     flex:1 0 135px;
 }
+.mat-column-ExamModeId{
+    flex:1 0 100px;
+}
 .mat-column-Action,.mat-column-Active,.mat-column-ReleaseResult {
     justify-content: center;
     flex:1 0 100px;
